Code audit — immutable lists, O(1) lookups, time constants, bounds checks
- AchievementTemplate: Arrays.asList -> List.of, O(1) findById via Map
- BountyTemplate: List.of, BonusType.fromId via static Map, Collectors.toUnmodifiableMap
- BountyManager: extract HOUR_MS/WEEK_MS constants, log empty catch in isPlayerAtFullHP
- AchievementManager: tighten isEndgameWeapon to match both Endgame_ and Weapon_ prefixes
- ComboMeterManager: Math.clamp bounds check on TIER_COLORS/TIER_NAMES arrays
- BossHealthManager: extract MINIMUM_BOSS_HEALTH constant
- EventRegistry: extract findUuidByHolder helper (deduplicate player lookup)
- BestiaryRegistry: add assertion for discovery arrays sync
- README: update achievement count (42), bounty count (54), languages